fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/PRF_Line_Item__c.object-meta.xml
<CustomObject>
    <label>PRF Line Item</label>
    <nameField>
        <displayFormat>PRFLI-{0000000}</displayFormat>
        <label>PRF Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRF Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>