fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Approval_Flag__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flag__c</fullName>
    <formula>IF( 
Approval_Flag_Reason__c &lt;&gt; &quot;Ready&quot;, 
1, 
0 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Flag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>