fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Approval_Flag_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flag_Checkbox__c</fullName>
    <formula>IF( 
Approval_Flag_Reason__c &lt;&gt; &quot;Ready&quot;, 
TRUE, 
FALSE 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Flag Checkbox</label>
    <type>Checkbox</type>
</CustomField>