fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level__c</fullName>
    <formula>/* These rules should cover 99% of Line Items */

/* Pricing Tiers */
if(
AND(
Check_Sales_Org_Key__c = &quot;US6010&quot;,
Check_Business_Unit__c &lt;&gt; &quot;Surgical Instruments&quot;,
Eligible_Price__c &lt;&gt; Requested_Price__c,
List_Price__c &lt;&gt; Requested_Price__c,
Requested_Price_PT__c &lt;&gt; Requested_Price__c
),4,

/* Sales Price is outside Cost Guidelines */
IF(
OR(Cost_Check__c &gt; Requested_Price__c, Floor_Price__c &gt; Requested_Price__c)
,4,
IF( 
AND( 
Cost__c != 0, 
Requested_Price__c &lt; Cost_Check__c, 
Eligible_Price__c &lt;&gt; Requested_Price__c, 
Requested_Price__c &lt;&gt; 0 
),4, 

/* Sales Price is outside Floor Guidelines */ 
IF( 
AND( 
Floor_Price__c != 0, 
Requested_Price__c &lt; Floor_Price__c, 
Eligible_Price__c &lt;&gt; Requested_Price__c, 
Requested_Price__c &lt;&gt; 0 
),4, 

/* Sales Price is outside Director Guidelines */ 
IF( 
AND( 
Director_Price__c != 0, 
Requested_Price__c &lt; Director_Price__c, 
Eligible_Price__c &lt;&gt; Requested_Price__c, 
Requested_Price__c &lt;&gt; 0 
),4, 

/* Sales Price is outside RSM Guidelines  */
IF(
AND(
List_Price__c != 0,
Eligible_Price__c &lt;&gt;  Requested_Price__c, 
Requested_Price__c &lt; RSM_Price__c
),3,

/* Sales Price is outside Rep Guidelines  */
IF(
AND(
List_Price__c != 0,
Eligible_Price__c &lt;&gt;  Requested_Price__c, 
Requested_Price__c &lt; Rep_Price__c
),2,

/* These are the exceptions that get sent to the RSM to sort out */

/* Sales Price is outside Director Guidelines  */

/* Sales Price is outside Cost Guidelines */ 
IF( 
AND( 
Cost__c != 0, 
Requested_Price__c &lt; Cost__c, 
LEFT(Sales_Deal_Description__c,3) = &quot;[*]&quot;
),4, 

/* Sales Price is outside Floor Guidelines */ 
IF( 
AND( 
Floor_Price__c != 0, 
Requested_Price__c &lt; Floor_Price__c, 
LEFT(Sales_Deal_Description__c,3) = &quot;[*]&quot;
),4, 

/* Sales Price is outside Director Guidelines */ 
IF( 
AND( 
Director_Price__c != 0, 
Requested_Price__c &lt; Director_Price__c, 
LEFT(Sales_Deal_Description__c,3) = &quot;[*]&quot;
),4, 

/* REP BIDS - Sales Price is outside RSM Guidelines */ 
IF( 
AND( 
Owner_Approval_Level__c = 2, 
Requested_Price__c &lt; RSM_Price__c, 
LEFT(Sales_Deal_Description__c,3) = &quot;[*]&quot;
),3,

/* REP BIDS - Sales Price is outside Rep Guidelines */ 
IF( 
AND( 
Owner_Approval_Level__c = 1, 
Requested_Price__c &lt; Rep_Price__c, 
LEFT(Sales_Deal_Description__c,3) = &quot;[*]&quot;
),2, 

/* Off Contract and List Price is Zero */
IF(
AND(
Requested_Price__c = 0,
List_Price__c = 0
),2,

/* When RSM and Rep Price is Zero, Sales Price must Equal Sales Price or Require Approval  */
IF(
AND(
Rep_Price__c = 0, 
RSM_Price__c = 0, 
ISBLANK(Sales_Deal_Description__c),
List_Price__c &lt;&gt;  Requested_Price__c
),2,

/* Sales Price is above Contract Price  */
IF(
AND(
!ISBLANK(Sales_Deal_Description__c),
Requested_Price__c &gt; Eligible_Price__c
),2,

/* Sales Price is above List Price  */
IF(
AND(
Requested_Price__c &gt; List_Price__c,
Eligible_Price__c &lt;&gt;  Requested_Price__c
),2,

/* When List is Zero, Sales Price has to equal Rep Pricing  */
IF(
AND(
List_Price__c = 0,
Requested_Price__c != Rep_Price__c,
ISBLANK(Sales_Deal_Description__c)
),2,
1
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>