fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Check_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Check_Business_Unit__c</fullName>
    <label>Check Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>