fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Check_Owner_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Check_Owner_Approval_Level__c</fullName>
    <formula>if(Workflow_Owner_Approval_Level__c &lt;&gt; Owner_Approval_Level__c, &quot;ERROR&quot;, &quot;OK&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Owner Approval Level</label>
    <type>Text</type>
</CustomField>