fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Check_Sales_Org_Key__c.field-meta.xml
<CustomField>
    <fullName>Check_Sales_Org_Key__c</fullName>
    <label>Check Sales Org Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>