fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Cost_Check__c.field-meta.xml
<CustomField>
    <fullName>Cost_Check__c</fullName>
    <description>Used to get value of Cost_Formula__c field into a non-formula field.</description>
    <label>Cost Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>