fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Material_Description__c.field-meta.xml
<CustomField>
    <fullName>Material_Description__c</fullName>
    <formula>Material_Name__r.Description</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Description</label>
    <type>Text</type>
</CustomField>