fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Material_Name__c.field-meta.xml
<CustomField>
    <fullName>Material_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material Name</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>PRF Line Items</relationshipLabel>
    <relationshipName>PRF_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>