fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Material_Name_Text_Formula__c.field-meta.xml
<CustomField>
    <fullName>Material_Name_Text_Formula__c</fullName>
    <formula>Material_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Name</label>
    <type>Text</type>
</CustomField>