fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/PQLI_ID__c.field-meta.xml
<CustomField>
    <fullName>PQLI_ID__c</fullName>
    <label>PQLI ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>