fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/PRF__c.field-meta.xml
<CustomField>
    <fullName>PRF__c</fullName>
    <label>PRF</label>
    <referenceTo>PRF__c</referenceTo>
    <relationshipName>PRF_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>