fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Rep_Price__c.field-meta.xml
<CustomField>
    <fullName>Rep_Price__c</fullName>
    <label>Rep Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>