fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Requested_Price_PT__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price_PT__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Requested Price (PT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>