fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Requested_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Requested_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested Pricing</label>
    <referenceTo>Contract_Header__c</referenceTo>
    <relationshipLabel>PRF Line Items (Requested Pricing)</relationshipLabel>
    <relationshipName>PRF_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>