fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Sales_Deal__c.field-meta.xml
<CustomField>
    <fullName>Sales_Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Deal</label>
    <referenceTo>Contract_Header__c</referenceTo>
    <relationshipLabel>PRF Line Items</relationshipLabel>
    <relationshipName>PRF_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>