fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Sales_Deal_Num__c.field-meta.xml
<CustomField>
    <fullName>Sales_Deal_Num__c</fullName>
    <label>Sales Deal #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>