fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/SAP_Sold_to__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sold_to__c</fullName>
    <label>SAP Sold-to</label>
    <length>10</length>
    <type>Text</type>
</CustomField>