fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Track_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Track_Approval_Level__c</fullName>
    <description>Used just to troubleshoot the approval process.</description>
    <inlineHelpText>This field tracks changes to the Approval Level field in order to troubleshoot and not a part of the Approval Level process.</inlineHelpText>
    <label>Track Approval Level</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>