fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Workflow_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Business_Unit__c</fullName>
    <formula>TEXT(PRF__r.Owner:User.Business_Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Business Unit</label>
    <type>Text</type>
</CustomField>