fullSandbox11072023/force-app/main/default/objects/PRF_Line_Item__c/fields/Workflow_Sales_Org_Key__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Sales_Org_Key__c</fullName>
    <formula>PRF__r.Sales_Org_Key__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Workflow Sales Org Key</label>
    <type>Text</type>
</CustomField>